--- a/facebook.html
+++ b/facebook.html
@@ -110,6 +110,7 @@
 </script>
 
 <button onclick="myFacebookLogin()">Login with Facebook</button>
+<button onclick="sendRequestViaMultiFriendSelector()">Don't See your friends? Invite Them</button>
 
 
 <p id="userName"></p>
