--- a/facebook.html
+++ b/facebook.html
@@ -85,7 +85,7 @@
         FB.ui({
             method: 'send',
             link: 'http://grumpygiraffe.github.io/Giftwrap/facebook.html',
-            description:'Hey I would like to find you a gift. Please sign up for this app'
+            message:'Hey I would like to find you a gift. Please sign up for this app'
         });
     }
 </script>
