added get_keyword method

--- a/trademe.html
+++ b/trademe.html
@@ -4,6 +4,7 @@
     <title>TradeMe</title>
 	<meta charset="utf-8" />
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/get_keyword.js"></script>
     <script src="js/trademe.js"></script>
     <link href="css/trademe.css" rel="stylesheet" />
 </head>
