Facebook Login Test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p>The smart gift finder - Buy gifts based on your friends interests.</p>
       <p>To get started, connect to Facebook below</p>
 
-%Script for facebooklogin
+//script for facebooklogin
 <script>
       function myFacebookLogin() {
         FB.login(function (response) {
