--- a/connected.html
+++ b/connected.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
 
     <script src="js/bootstrap.min.js"></script>
@@ -68,23 +69,21 @@
 <div class="jumbotron">
    <div class="container">
       <h1>Great! Now choose a friend..</h1>
+      
+      
+<select class="form-control" id="chooseFriend">
+  <option value="FB_User_ID">Friend 1</option>
+  <option value="FB_User_ID">Friend 2</option>
+  <option value="FB_User_ID">Friend 3</option>
+  <option value="FB_User_ID">Friend 4</option>
+  <option value="FB_User_ID">Friend 5</option>
+  <option value="FB_User_ID">Friend 6</option>
+</select>
+
+
 
 
 <p><a class="btn btn-success btn-lg" href="product.html" role="button">Find me gifts! &raquo;</a></p>
-
-
- <select id="demo-htmlselect" size="5">
-        <option value="0" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/facebook-icon-32.png"
-            data-description="Description with Facebook">Facebook</option>
-        <option value="1" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/twitter-icon-32.png"
-            data-description="Description with Twitter">Twitter</option>
-        <option value="2" selected="selected" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/linkedin-icon-32.png"
-            data-description="Description with LinkedIn">LinkedIn</option>
-        <option value="3" data-imagesrc="http://dl.dropbox.com/u/40036711/Images/foursquare-icon-32.png"
-            data-description="Description with Foursquare">Foursquare</option>
-    </select>
-
-
 
 
   
