--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -29,7 +28,8 @@
     <![endif]-->
   </head>
 
-  <body>
+<body>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Giftwrap Gift Finder</a>
+            <img id="logo" src="img/giftwrappr_logo.png" alt="giftwrappr" >
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,6 +60,9 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+
+
+
 
 
 <div class="jumbotron">
