implemented next and prev

--- a/trademe.html
+++ b/trademe.html
@@ -15,6 +15,8 @@
         </header>
         <div>
             <input type="text" id="searchTerm"><span id="searchNow" class="fakelink">Search</span>
+            <input type="submit" id ="next" value ="Next">
+            <input type="submit" id ="prev" value ="Prev">
         </div>
         <div id="content">
             <ul id="listings"></ul>
