Update of styles and logos

--- a/connected.html
+++ b/connected.html
@@ -68,7 +68,7 @@
 
 <div class="jumbotron">
    <div class="container">
-      <h1>Great! Now choose a friend..</h1>
+      <h2>Great <span id="fbName">{{fbName}}</span>!</br>Now choose a friend..</h2>
       
       
 <select class="form-control" id="chooseFriend">
@@ -84,6 +84,9 @@
 
 
 <p><a class="btn btn-success btn-lg" href="product.html" role="button">Find me gifts! &raquo;</a></p>
+
+
+      <h2>Don't see your friend? <a href="#">Send them an invite!</a></h2>
 
 
   
