--- a/index.html
+++ b/index.html
@@ -84,37 +84,21 @@
 
     <div class="container">
 
-
-
-
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-12">
           <h2>What is it?</h2>
           <p>Giftwrappr is a new and innovative tool which simplifies the gift buying process. Don’t settle for gift cards or generic gift finders – Giftwrappr looks directly at your friends interests and automagically gives you suggestions!</p>
         </div>
       </div>
 
-    </div> <!-- /container -->
-
       <div class="row">
-        <div id="FB_TM_Title">
-       	  <div class="col-md-12">
-          	<p>Facebook + Trade Me</p>
-          </div>
-        </div>
-      </div>
-
-    <div class="container">
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-12">
           <h2>How does it work?</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
         </div>
       </div>
 
+            <img id="fb_tm" src="img/fb_tm.png" alt="Facebook + Trade Me" >
 
 
 
