--- a/product.html
+++ b/product.html
@@ -70,10 +70,10 @@
    
          <h3><span id="fbName">{{fbName}}</span> may like...</h3>
 
-   <img src="<span id="imagePath">{{imagePath}}></span>.jpg" class="img-rounded img-responsive">
+   <p>IMAGE HERE</p>
    
       <h2><span id="productName">{{productName}}</span></h2>
-      <p>$ <span id="price>{{price}}</span>"</p>
+      <p>$ <span id="price">{{price}}</span></p>
       <a href=""><p>View in TradeMe</p></a>
 
       
@@ -83,35 +83,6 @@
 
     <div class="container">
 
-
-
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-8">
-          <h2>What is it?</h2>
-          <p>Giftwrappr is a new and innovative tool which simplifies the gift buying process. Don’t settle for gift cards or generic gift finders – Giftwrappr looks directly at your friends interests and automagically gives you suggestions!</p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-8">
-          <h2>How does it work?</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
 
 
 
