Working all on one page

--- a/facebook.html
+++ b/facebook.html
@@ -94,19 +94,19 @@
     var friendsList =
     {"data": [
         {
-            "name": "Tuğba Coşkun",
+            "name": "Sana Oshika",
             "id": "584223463345"
         },
         {
-            "name": "Vijay Prema",
+            "name": "Sheldon Nunes",
             "id": "689076168"
         },
         {
-            "name": "Lisa Maddock",
+            "name": "Saif Asad",
             "id": "68953213384"
         },
         {
-            "name": "Robbie Bruck",
+            "name": "Julian de Villiers",
             "id": "101524742248854151241"
         }
     ],
