--- a/index.html
+++ b/index.html
@@ -18,18 +18,12 @@
     <!-- Custom styles for this template -->
     <link href="css/jumbotron-narrow.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
-
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <script src="js/jquery-2.1.4.min.js"></script>
+      <script src="js/bootstrap.js"></script>
       <script src="js/facebook.js"></script>
+           <!-- <script src="js/trademe.js"></script> -->
+      <script src="js/app.js"></script>
+
   </head>
 
 <body>
@@ -54,7 +48,12 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-
+                        <li class="page-scroll">
+                        <a href="#" id="selectFriendsPageMenu">Choose Friend</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#" id="productMenu">Gift</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="about.html">About</a>
                     </li>
@@ -68,7 +67,7 @@
 
 
 
-
+<div id="content">
 <div class="jumbotron">
    <div class="container">
       <h1>Gift Buying Automated.</h1>
@@ -80,6 +79,7 @@
      
      
    </div>
+</div>
 </div>
 
     <div class="container">
@@ -108,8 +108,5 @@
 
     </div> <!-- /container -->
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
