--- a/connected.html
+++ b/connected.html
@@ -21,19 +21,11 @@
 
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
-      <script src="js/app.js"></script>
-        <script src = js/facebook.js"></script>
-        <script src = js/trademe.js"></script>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+        <script src="js/facebook.js"></script>
+        <script src="js/trademe.js"></script>
+    <script src="js/app.js"></script>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
 
@@ -100,7 +92,6 @@
 </select>
 
 <script>
-    console.log("HERE");
     listFriends();
 </script>
 
