added change category

--- a/trademe.html
+++ b/trademe.html
@@ -17,6 +17,7 @@
             <input type="text" id="searchTerm"><span id="searchNow" class="fakelink">Search</span>
             <input type="submit" id ="next" value ="Next">
             <input type="submit" id ="prev" value ="Prev">
+            <input type="submit" id ="nextCat" value ="Change Category">
         </div>
         <div id="content">
             <ul id="listings"></ul>
@@ -25,5 +26,6 @@
     </div>
 </body>
 </html>
+
 
 
