Hooray everything is merged.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <script src="js/jquery-2.1.4.min.js"></script>
       <script src="js/bootstrap.js"></script>
       <script src="js/facebook.js"></script>
-           <!-- <script src="js/trademe.js"></script> -->
+      <script src="js/trademe.js"></script>
       <script src="js/app.js"></script>
 
   </head>
@@ -74,7 +74,7 @@
       <p>The smart gift finder - Buy gifts based on your friends interests.</p>
       <p>To get started, connect to Facebook below</p>
 
-<img id="facebookLogin" onClick="myFacebookLogin()" src="img/facebook_login.png" alt="Login with Facebook..." >
+<img id="facebookLogin" src="img/facebook_login.png" alt="Login with Facebook..." >
 
      
      
